--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -20,3 +20,11 @@
 .App-link {
   color: #09d3ac;
 }
+
+#managerbg{
+  background-image: url('https://mdbootstrap.com/img/Photos/Others/architecture.jpg');
+   background-repeat: no-repeat;
+    /* background-size: cover;  */
+    background-position: center center;
+    height: 790px
+}
