Checkpoint commit for sidebar

--- a/Frontend/src/styles/Navigation.css
+++ b/Frontend/src/styles/Navigation.css
@@ -10,7 +10,7 @@
   display: flex!important;
   justify-content: center;
   z-index: 99;
-  background-color: #b92b27;
+  background-color: #2c317b;
 }
 .header-nav{
   width: 914px;
