--- a/Frontend/src/styles/Canvas.css
+++ b/Frontend/src/styles/Canvas.css
@@ -119,7 +119,7 @@
     padding-bottom: 25px;
     text-align: center;
     color:white;
-    background-color: rgb(42, 67, 89);
+    background-color: #3F0E40;
     padding-top:25px;
   }
   
@@ -128,7 +128,7 @@
   }
   
   #nav-sidebar ul.sidebar-components {
-    background-color: rgb(42, 67, 89);
+    background-color: #3F0E40;
     height: 100vh;
     padding-left: 0;
     list-style: none;
@@ -156,7 +156,7 @@
   
   #nav-sidebar ul li.active > a, a[aria-expanded="true"] {
     color: #fff;
-    background-color: rgb(42, 67, 89);
+    background-color: #3F0E40;
   }
   #nav-sidebar ul li a {
     color: #fff;
